Mon Aug 15 16:08:15 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_valuetype.cpp:
        
          Removed incorrect generation of '::' before generation of
          CORBA::add_ref() and CORBA::remove_ref() declarations.

Mon Aug 15 15:45:32 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_exception/exception_ch.cpp:
        
          Modified changes in
          
          Fri Aug 12 22:13:15 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

          slightly to omit the generation of the leading double colon
          if a field is a typedef of a basic type. In some of these
          cases, the ACE_NESTED_MACRO will be generated, and the
          leading double colon would be incorrect.

Mon Aug 15 10:15:40 CDT 2005  Steve Totten  <totten_s@ociweb.com>

        Committed the following change that came originally from
        Dave Giovannini of OCI in OCI's TAO 1.4a.

        Mon Jul 18 14:04:58 2005  David Giovannini  <giovannd@ociweb.com>

        * tao/DynamicInterface/DII_Invocation_Adapter.cpp:

          Add forward invocation to DII adaptor.

Mon Aug 15 10:48:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Cubit/TAO/MT_Cubit/tmplinst.cpp:
        * performance-tests/Cubit/TAO/IDL_Cubit/tmplinst.cpp:
        * orbsvcs/tests/Concurrency/tmplinst.cpp:
          Removed these files

        * performance-tests/Cubit/TAO/MT_Cubit/MT_Cubit.mpc:
        * performance-tests/Cubit/TAO/IDL_Cubit/IDL_Cubit.mpc:
          Removed the files above

Fri Aug 12 22:15:14 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/nested_scope.idl:

          Added the IDL test file sent in by Nikolay Metchev
          <n.metchev@teamphone.com> to the test suite.

Fri Aug 12 22:13:15 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_interface.cpp:
        * TAO_IDL/be/be_predefined_type.cpp:
        * TAO_IDL/be/be_valuetype.cpp: